# channelcoding

./: README.md  launch.rb  license_bsd.txt
src/: CMakeLists.txt  bch.c++  bch.h  center.h  cyclic.h  eval.c++  eval.h  exercises.c++  gf.c++  gf.h  iterative.h  ln.c++  matrix.h  md.c++  minsum_fk.c++  optimization.c++  optimize_2d.c++  optimize_beta.c++  performance.c++  rm.c++  rs.c++  rs.h  tasks.c++  uncoded.c++  util.h
src/codes/: bch.h  codes.c++  codes.h  cyclic.h  hard_decision.h  protocol.h  rs.h  soft_decision.h  uncoded.h
src/gf/: gf.h  linear_equation_system.h  polynomial.h
src/math/: galois.h  linear_equation_system.h  matrix.h  polynomial.h
src/simulation/: benchmark.c++  bitflips.c++  simulation.c++  simulation.h  uncoded.c++
